// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataImporter renders with error with a message 1`] = `
<div>
  <Row
    className="mb3"
    gutter={0}
  >
    <Col>
      <Alert
        message="Fill in the field to automatically import more data from arXiv or DOI"
        type="info"
      />
    </Col>
  </Row>
  <Row
    className="mb3"
    gutter={0}
  >
    <Col>
      <Alert
        closable={true}
        message="error"
        showIcon={true}
        type="error"
      />
    </Col>
  </Row>
  <FormItem
    colon={true}
    hasFeedback={false}
    label="From arXiv or DOI"
    labelCol={
      Object {
        "span": 5,
      }
    }
    prefixCls="ant-form"
    wrapperCol={
      Object {
        "span": 19,
      }
    }
  >
    <Input
      data-test-id="import-input"
      disabled={false}
      onChange={[Function]}
      onPressEnter={[Function]}
      placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
      prefixCls="ant-input"
      type="text"
    />
  </FormItem>
  <Row
    align="middle"
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <Col>
      <LinkLikeButton
        dataTestId="skip-import-button"
        onClick={[MockFunction]}
      >
        Skip and fill the form manually
      </LinkLikeButton>
    </Col>
    <Col>
      <Button
        block={false}
        data-test-id="import-button"
        ghost={false}
        loading={false}
        onClick={[Function]}
        prefixCls="ant-btn"
        type="primary"
      >
        Import
      </Button>
    </Col>
  </Row>
</div>
`;

exports[`DataImporter renders with error without a message 1`] = `
<div>
  <Row
    className="mb3"
    gutter={0}
  >
    <Col>
      <Alert
        message="Fill in the field to automatically import more data from arXiv or DOI"
        type="info"
      />
    </Col>
  </Row>
  <Row
    className="mb3"
    gutter={0}
  >
    <Col>
      <Alert
        closable={true}
        message="Something went wrong during the import"
        showIcon={true}
        type="error"
      />
    </Col>
  </Row>
  <FormItem
    colon={true}
    hasFeedback={false}
    label="From arXiv or DOI"
    labelCol={
      Object {
        "span": 5,
      }
    }
    prefixCls="ant-form"
    wrapperCol={
      Object {
        "span": 19,
      }
    }
  >
    <Input
      data-test-id="import-input"
      disabled={false}
      onChange={[Function]}
      onPressEnter={[Function]}
      placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
      prefixCls="ant-input"
      type="text"
    />
  </FormItem>
  <Row
    align="middle"
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <Col>
      <LinkLikeButton
        dataTestId="skip-import-button"
        onClick={[MockFunction]}
      >
        Skip and fill the form manually
      </LinkLikeButton>
    </Col>
    <Col>
      <Button
        block={false}
        data-test-id="import-button"
        ghost={false}
        loading={false}
        onClick={[Function]}
        prefixCls="ant-btn"
        type="primary"
      >
        Import
      </Button>
    </Col>
  </Row>
</div>
`;

exports[`DataImporter renders without error while importing 1`] = `
<div>
  <Row
    className="mb3"
    gutter={0}
  >
    <Col>
      <Alert
        message="Fill in the field to automatically import more data from arXiv or DOI"
        type="info"
      />
    </Col>
  </Row>
  <FormItem
    colon={true}
    hasFeedback={false}
    label="From arXiv or DOI"
    labelCol={
      Object {
        "span": 5,
      }
    }
    prefixCls="ant-form"
    wrapperCol={
      Object {
        "span": 19,
      }
    }
  >
    <Input
      data-test-id="import-input"
      disabled={false}
      onChange={[Function]}
      onPressEnter={[Function]}
      placeholder="hep-th/9711200 or 1207.7235 or arXiv:1001.4538 or 10.1086/305772 or doi:10.1086/305772"
      prefixCls="ant-input"
      type="text"
    />
  </FormItem>
  <Row
    align="middle"
    gutter={0}
    justify="space-between"
    type="flex"
  >
    <Col>
      <LinkLikeButton
        dataTestId="skip-import-button"
        onClick={[MockFunction]}
      >
        Skip and fill the form manually
      </LinkLikeButton>
    </Col>
    <Col>
      <Button
        block={false}
        data-test-id="import-button"
        ghost={false}
        loading={true}
        onClick={[Function]}
        prefixCls="ant-btn"
        type="primary"
      >
        Import
      </Button>
    </Col>
  </Row>
</div>
`;
